--- a/views/login.ejs
+++ b/views/login.ejs
@@ -4,13 +4,9 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="google-signin-client_id" content="447455559833-ljk9u5g2l127si0dh4g7lp1mvb59ojli.apps.googleusercontent.com">
-    <script src="https://apis.google.com/js/platform.js" async defer></script>
     <title>Login Page</title>
 </head>
 <body>
-    <h2>Login</h2>
-    <div class="g-signin2" data-onsuccess="onSignIn"></div>
-    <script src="/js/google.auth.js"></script>
+    <a href="/auth/google">login by google</a>
 </body>
 </html>
