Login AND SignUp Pages Design

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -22,7 +22,7 @@
                     <li><a href="">PRODUCTS</a></li>
                     <li><a href="">CONTACTS</a></li>
                     <li><a href="">SERVICES</a></li>
-                    <li><a href="">LOGIN</a></li>
+                    <li><a href="/login">LOGIN</a></li>
                     
                 </ul>
             </nav>
@@ -32,7 +32,8 @@
             <div class="col-1">
                 <h1>HELLO</h1>
                 <h1>THERE!</h1>
-                <button type="button">SIGNUP FOR FREE<img src="/images/landing.images/arrow.png"</button>
+                <a href="/signup">
+                <button type="button">SIGNUP FOR FREE<img src="/images/landing.images/arrow.png"></button></a>
             </div>
             <div class="col-2">
                 <img src="/images/landing.images/landing-photo.png" class="pho">
