--- a/views/login.ejs
+++ b/views/login.ejs
@@ -1,12 +1,78 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Login Page</title>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Nunito:wght@400;600&display=swap" rel="stylesheet">
+    
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+    <link rel="stylesheet" href="/css/login.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css"
+        integrity="sha512-9usAa10IRO0HhonpyAIVpjrylPvoDwiPUiKdWk5t3PyolY1cOd4DSE0Ga+ri4AuTroPR5aQvXU9xC6qOPnzFeg=="
+        crossorigin="anonymous" referrerpolicy="no-referrer" />
+        
 </head>
+
 <body>
-    <a href="/auth/google">login by google</a>
+    <section class="form my-4 mx-4 ">
+        <div class="container">
+            <div class="row box-shadow mt-5 ">
+                <div class="col-lg-5">
+                    <img src="/images/login/pic.png" class="img-fluid" alt="">
+                </div>
+                <div class="col-lg-7 px-5 pt-5 ">
+                    <div class="font-color">
+                    <h1 class="font-weight-bold py-3"> Hello !</h1>
+                    <h4> SIGN INTO YOUR ACCOUNT !</h4>
+                </div>
+                    <form>
+                        <div class="form-row">
+                            <div class="col-lg-7 ">
+                                <input type="email" placeholder="Enter email/phone number"
+                                    class="form-control my-3 p-3" required>
+                            </div>
+                        </div>
+                        <div class="form-row">
+                            <div class="col-lg-7 ">
+                                <input type="password" placeholder="Enter password" class="form-control  my-3 p-3" required>
+                                <a href="">Forgot password </a>
+                            </div>
+                        </div>
+                        <div class="form-row">
+                            <div class="col-lg-7">
+                                <button type="submit" class="btn1  mt-3 mb-3">
+                                    LOGIN
+                                </button>
+                            </div>
+                        </div>
+                        <div class="form-lg-7">
+                            <p> OR LOGIN WITH </p>
+                            <a href="/auth/google">
+                                <img src="/images/login/icon-google.png" alt="icon google" class="mt-2 mb-3 pe-4 "></a>
+                                <a href=""><i class="fa-brands fa-facebook icon"  id="pic"></i></a> 
+                            <p> DON'T HAVE AN ACCOUNT ?<a href=""> Sign up </a></p>
+                        </div>
+                       
+                    </form>
+                </div>
+
+
+            </div>
+        </div>
+    </section>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
+        crossorigin="anonymous"></script>
+
+    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.10.2/dist/umd/popper.min.js"
+        integrity="sha384-7+zCNj/IqJ95wo16oMtfsKbZ9ccEh31eOz1HGyDuCQ6wgnyJNSYdrPa03rtR1zdB"
+        crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.min.js"
+        integrity="sha384-QJHtvGhmr9XOIpI6YVutG+2QOK9T+ZnN4kzFN1RtK3zEFEIsxhlmWl5/YESvpZ13"
+        crossorigin="anonymous"></script>
 </body>
 </html>
