change password validation

--- a/views/changePassword.ejs
+++ b/views/changePassword.ejs
@@ -18,9 +18,9 @@
         <img src="/images/enterPasswordImg/a_lock.png " class="a_lock_small"">
         <h1>Change your password</h1>
         <h3>New password</h3>
-        <input type="password" class="input">
+        <input type="password" class="input" id="pas1">
         <h3>Confirm new password</h3>
-        <input type="password" class="input">
+        <input type="password" class="input" id="pas2">
         <button id="submit">Change my password</button>
     </div>
     </div>
@@ -28,5 +28,6 @@
         <img src="/images/enterPasswordImg/a_lock.png" class="a_lock"> 
     </div>
 </main>
+<script src="/js/changePass.js"></script>
 </body>
 </html>
