upload enter email validation

--- a/views/changePassword.ejs
+++ b/views/changePassword.ejs
@@ -21,7 +21,7 @@
         <input type="password" class="input" id="pas1">
         <h3>Confirm new password</h3>
         <input type="password" class="input" id="pas2">
-        <button id="submit">Change my password</button>
+        <button id="submit" onclick="matchPassword()">Change my password</button>
     </div>
     </div>
     <div class="col-2">
