--- a/views/enterEmail.ejs
+++ b/views/enterEmail.ejs
@@ -22,8 +22,8 @@
         </p>
         <br>
         <h3>Email</h3>
-        <input type="email" placeholder="Please enter your email"><br>
-        <button type="button">Continue</button>
+        <input type="email" placeholder="Please enter your email"id="address"><br>
+        <button type="button" onclick="ValidateEmail()">Continue</button>
        </div>
        <div class="footer">
            <h3>Don't have an account?</h3>
