Some improvements to the code

--- a/views/signup.ejs
+++ b/views/signup.ejs
@@ -65,7 +65,7 @@
                             <div class="form-group pt-2 pb-3">
                                 <input type="submit" class="btn btn-primary btn-block" id="submit">
                             </div>
-                            <p class="pp"> Already a member ?<a href=""> Log in</a> </p>
+                            <p class="pp"> Already a member ?<a href="/login"> Log in</a> </p>
                         </form>
                     </div>
                 </div>
