--- a/views/enterEmail.ejs
+++ b/views/enterEmail.ejs
@@ -27,7 +27,7 @@
        </div>
        <div class="footer">
            <h3>Don't have an account?</h3>
-           <a href="">Sign up </a>
+           <a href="/signup">Sign up </a>
        </div>
    </div> 
    <script src="/js/enterEmail.js"></script>
