--- a/views/login.ejs
+++ b/views/login.ejs
@@ -39,7 +39,7 @@
                         <div class="form-row">
                             <div class="col-lg-7 ">
                                 <input type="password" placeholder="Enter password" class="form-control  my-3 p-3" required>
-                                <a href="">Forgot password </a>
+                                <a href="/enterEmail">Forgot password </a>
                             </div>
                         </div>
                         <div class="form-row">
@@ -54,7 +54,7 @@
                             <a href="/auth/google">
                                 <img src="/images/login/icon-google.png" alt="icon google" class="mt-2 mb-3 pe-4 "></a>
                                 <a href=""><i class="fa-brands fa-facebook icon"  id="pic"></i></a> 
-                            <p> DON'T HAVE AN ACCOUNT ?<a href=""> Sign up </a></p>
+                            <p> DON'T HAVE AN ACCOUNT ?<a href="/signup"> Sign up </a></p>
                         </div>
                        
                     </form>
