--- a/views/signup.ejs
+++ b/views/signup.ejs
@@ -31,36 +31,36 @@
                             
                             <P>Enter Your Personal Information </P>
                         </div>
-                        <form name="regform" id="regform">
+                        <form method="POST" action="/auth/signup" name="regform" id="regform">
                             <div class="form-group">
                                 <i class="fas fa-user"></i>
                                 <label class="ps-2 label"> Name </label>
-                                    <input type="text" class="form-control input" id="name" name=""
+                                    <input type="text" class="form-control input" id="name" name="name"
                                         placeholder="Enter Your Name" required>
-                                    <p id="p1"></p>
+                                    
                             </div>
                             <div class="form-group">
                                 <i class="fa-solid fa-envelope"></i>
                                 <label class="ps-2 label"> Email </label>
                                 
-                                    <input type="email" class="form-control input" id="email" name=""
+                                    <input type="email" class="form-control input" id="email" name="email"
                                         placeholder="Enter Your Email" required>
-                                    <p id="p2"></p>
+                                    
                             </div>
                             <div class="form-group">
                                 <i class="fa-solid fa-lock"></i>
                                 <label class="ps-2 label"> Password </label>
                                 
-                                    <input type="password" class="form-control input" id="password" name=""
+                                    <input type="password" class="form-control input" id="password" name="password"
                                         placeholder="Enter Your Password" required>
-                                    <p id="p3"></p>
+                                    
                             </div>
                             <div class="form-group">
                                 <i class="fa-solid fa-lock"></i>
                                 <label class="ps-2 label"> Confirm Password </label>
                                     <input type="password" class="form-control input" id="password" name=""
                                         placeholder="Enter Your Password Agian" required>
-                                    <p id="p3"></p>
+                                    
                             </div>
                             <div class="form-group pt-2 pb-3">
                                 <input type="submit" class="btn btn-primary btn-block" id="submit">
