Login By Noor & Rajab

--- a/views/dashboard.ejs
+++ b/views/dashboard.ejs
@@ -21,16 +21,16 @@
       <div class="landing d-flex justify-content-center align-items-center">
         <div class="card-profile">
           <div class="text-center p-2 ">
-            <img src="<%= user.image %>" alt="">
-            <p class=""><%= user.displayName %></p>
+            <img src="/images/download.png" alt="">
+            <p class=""></p>
           </div>
           <div class="information d-flex align-items-center justify-content-start p-2">
             <i class="fa-solid fa-arrow-right text-primary"></i>
-            <p class="mb-0 ms-2"><%= user.firstName %></p>
+           
           </div>
           <div class="information d-flex align-items-center justify-content-start p-2">
             <i class="fa-solid fa-arrow-right text-primary"></i>
-            <p class="mb-0 ms-2"><%= user.lastName %></p>
+            <p class="mb-0 ms-2"><%= user.displayName %></p>
           </div>
           <div class="information d-flex align-items-center justify-content-start p-2">
             <i class="fa-solid fa-envelope text-primary"></i>
