Login By Facebook & Do some changes

--- a/views/dashboard.ejs
+++ b/views/dashboard.ejs
@@ -21,12 +21,8 @@
       <div class="landing d-flex justify-content-center align-items-center">
         <div class="card-profile">
           <div class="text-center p-2 ">
-            <img src="/images/download.png" alt="">
+            <img src="<%= user.image %>" alt="">
             <p class=""></p>
-          </div>
-          <div class="information d-flex align-items-center justify-content-start p-2">
-            <i class="fa-solid fa-arrow-right text-primary"></i>
-           
           </div>
           <div class="information d-flex align-items-center justify-content-start p-2">
             <i class="fa-solid fa-arrow-right text-primary"></i>
