--- a/views/login.ejs
+++ b/views/login.ejs
@@ -53,7 +53,7 @@
                             <p> OR LOGIN WITH </p>
                             <a href="/auth/google">
                                 <img src="/images/login/icon-google.png" alt="icon google" class="mt-2 mb-3 pe-4 "></a>
-                                <a href=""><i class="fa-brands fa-facebook icon"  id="pic"></i></a> 
+                                <a href="/auth/facebook"><i class="fa-brands fa-facebook icon"  id="pic"></i></a> 
                             <p> DON'T HAVE AN ACCOUNT ?<a href="/signup"> Sign up </a></p>
                         </div>
                        
