--- a/views/signup.ejs
+++ b/views/signup.ejs
@@ -26,7 +26,7 @@
                             <h1 class="pt-4"> SIGN UP </h1>
                             <a href="/auth/google">
                                 <img src="/images/signup/icon-google.png" alt="icon google" class="mt-2 mb-3 pe-4"></a>
-                           <a href=""><i class="fa-brands fa-facebook icon"></i></a> 
+                           <a href="/auth/facebook"><i class="fa-brands fa-facebook icon"></i></a> 
                             <p> OR </p>
                             
                             <P>Enter Your Personal Information </P>
