Reset password & some changes

--- a/views/changePassword.ejs
+++ b/views/changePassword.ejs
@@ -16,12 +16,15 @@
     <div class="col-1">
         <div class="contant">
         <img src="/images/enterPasswordImg/a_lock.png " class="a_lock_small">
-        <h1>Change your password</h1>
-        <h3>New password</h3>
-        <input type="password" class="input" id="pas1">
-        <h3>Confirm new password</h3>
-        <input type="password" class="input" id="pas2">
-        <button id="submit" onclick="matchPassword()"> Change my password </button>
+        <form action="/changePassword" method="post">
+            <h1>Change your password</h1>
+            <h3>New password</h3>
+            <input type="password" class="input" id="pas1" name="password">
+            <h3>Confirm new password</h3>
+            <input type="password" class="input" id="pas2">
+            <input type="hidden" name="tok" value="<%= tok %>">
+            <button id="submit" onclick="matchPassword()"> Change my password </button>
+        </form>
     </div>
     </div>
     <div class="col-2">
