--- a/views/verification.ejs
+++ b/views/verification.ejs
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width,initial-scale=1.0"> 
     <title> Autofocus Field</title>
-    <link rel="stylesheet" href="verification.css">
+    <link rel="stylesheet" href="/css/verification.css">
    
    </head>
   
