--- a/views/dashboard.ejs
+++ b/views/dashboard.ejs
@@ -1,39 +1,2 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css" integrity="sha512-9usAa10IRO0HhonpyAIVpjrylPvoDwiPUiKdWk5t3PyolY1cOd4DSE0Ga+ri4AuTroPR5aQvXU9xC6qOPnzFeg==" crossorigin="anonymous" referrerpolicy="no-referrer" />
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
-    <link rel="stylesheet" href="/css/dashboard.css">
-    <title>Dashboard</title>
-</head>
-<body>
-    <nav class="navbar navbar-dark bg-dark">
-        <div class="container-fluid">
-          <a class="navbar-brand" href="/">
-            <span class="text-primary">NULL</span> Dashboard
-          </a>
-          <a href="/logout" class="btn btn-primary">logout</a>
-        </div>
-      </nav>
-      <div class="landing d-flex justify-content-center align-items-center">
-        <div class="card-profile">
-          <div class="text-center p-2 ">
-            <img src="<%= user.image %>" alt="">
-            <p class=""></p>
-          </div>
-          <div class="information d-flex align-items-center justify-content-start p-2">
-            <i class="fa-solid fa-arrow-right text-primary"></i>
-            <p class="mb-0 ms-2"><%= user.displayName %></p>
-          </div>
-          <div class="information d-flex align-items-center justify-content-start p-2">
-            <i class="fa-solid fa-envelope text-primary"></i>
-            <p class="mb-0 ms-2"><%= user.email %></p>
-          </div>
-        </div>
-      </div>
-      <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
-</body>
-</html>
+<%- include('./dashboard/partials/dashboard_header') %>
+<%- include('./dashboard/partials/dashboard_footer') %>
