Add New Product

--- a/views/dashboard/partials/dashboard_header.ejs
+++ b/views/dashboard/partials/dashboard_header.ejs
@@ -93,17 +93,17 @@
               </li>
               <% if(user.isAdmin) { %>
               <li class="sidebar-dropdown">
-                <a href="#">
+                <a>
                   <i class="fa fa-shopping-cart"></i>
                   <span>Products</span>
                 </a>
                 <div class="sidebar-submenu">
                   <ul>
                     <li>
-                      <a href="#">Add New Product </a>
+                      <a href="/dashboard/products/add_new_product">Add New Product </a>
                     </li>
                     <li>
-                      <a href="#">Show Products</a>
+                      <a href="/dashboard/products/product_list">Show Products</a>
                     </li>
                   </ul>
                 </div>
