--- a/views/dashboard/products/update_product.ejs
+++ b/views/dashboard/products/update_product.ejs
@@ -1,17 +1,19 @@
 <%- include('../partials/dashboard_header') %>
 <div class="container">
-  <form method="POST" action="/dashboard/products/add_new_product" enctype="multipart/form-data">
-    <h2>Add New Product</h2>
+  <form method="POST" action="/dashboard/products/update" enctype="multipart/form-data">
+    <h2>Update Product</h2>
     <div class="row">
       <div class="col-md-6">
         <div class="form-group">
           <label for="first">Code</label>
+          <input type="hidden" name="id" value="<%= product._id %>">
           <input
             type="text"
             class="form-control"
             placeholder="Enter product code"
             id="first"
             name="code"
+            value="<%= product.code %>"
           />
         </div>
       </div>
@@ -27,6 +29,7 @@
             placeholder="Enter product name"
             id="first"
             name="name"
+            value="<%= product.name %>"
           />
         </div>
       </div>
@@ -38,13 +41,14 @@
         <div class="form-group">
           <div class="form-floating">
             <label for="floatingTextarea2">Description</label>
-            <textarea
+            <input
+              type="text"
               class="form-control"
               placeholder="Description about product"
               id="floatingTextarea2"
-              style="height: 100px"
               name="description"
-            ></textarea>
+              value="<%= product.description %>"
+            >
           </div>
         </div>
       </div>
@@ -55,7 +59,7 @@
         <div class="form-group">
           <div class="mb-3">
             <label for="formFile" class="form-label">Product Image</label>
-            <input class="form-control" type="file" id="formFile" name="image"/>
+            <input class="form-control" type="file" id="formFile" name="image" />
           </div>
         </div>
       </div>
@@ -89,6 +93,7 @@
             placeholder="Enter product price"
             id="price"
             name="price"
+            value="<%= product.price %>"
           />
         </div>
       </div>
@@ -104,12 +109,13 @@
             placeholder="Enter product quantity"
             id="quantity"
             name="quantity"
+            value="<%= product.quantity %>"
           />
         </div>
       </div>
     </div>
 
-    <button type="submit" class="btn btn-primary">Submit</button>
+    <button type="submit" class="btn btn-primary">Save</button>
     <a href="/dashboard/products/product_list" class="btn btn-danger">Cancel</a>
   </form>
 </div>
