--- a/views/dashboard/partials/dashboard_header.ejs
+++ b/views/dashboard/partials/dashboard_header.ejs
@@ -32,7 +32,7 @@
       <nav id="sidebar" class="sidebar-wrapper">
         <div class="sidebar-content">
           <div class="sidebar-brand">
-            <a href="#">pro sidebar</a>
+            <a href="#">null sidebar</a>
             <div id="close-sidebar">
               <i class="fas fa-times"></i>
             </div>
@@ -62,6 +62,12 @@
             <ul>
               <li class="header-menu">
                 <span>General</span>
+              </li>
+              <li class="sidebar-dropdown">
+                <a href="/">
+                  <i class="fas fa-home"></i>
+                  <span>Home</span>
+                </a>
               </li>
               <li class="sidebar-dropdown">
                 <a href="/dashboard">
