--- a/views/dashboard/products/update_product.ejs
+++ b/views/dashboard/products/update_product.ejs
@@ -22,12 +22,12 @@
     <div class="row">
       <div class="col-md-6">
         <div class="form-group">
-          <label for="first">Name</label>
+          <label for="name">Name</label>
           <input
             type="text"
             class="form-control"
             placeholder="Enter product name"
-            id="first"
+            id="name"
             name="name"
             value="<%= product.name %>"
           />
@@ -71,7 +71,7 @@
           <div class="form-floating">
             <label for="exampleInputEmail1">Category</label>
             <select name="category" class="custom-select custom-select-sm">
-              <option value="" selected>Category</option>
+              <option value="" >Category</option>
               <option value="1" >Houseware</option>
               <option value="2" >Cosmetics</option>
               <option value="3" >School Tools</option>
