--- a/views/index.ejs
+++ b/views/index.ejs
@@ -19,7 +19,7 @@
             <nav>
                 <ul id="menuList">
                     <li ><a href="">ABOUT</a></li>
-                    <li><a href="">PRODUCTS</a></li>
+                    <li><a href="/PopularProducts">PRODUCTS</a></li>
                     <li><a href="">CONTACTS</a></li>
                     <li><a href="">SERVICES</a></li>
                     <li><a href="/login">LOGIN</a></li>
