--- a/views/PopularProducts.ejs
+++ b/views/PopularProducts.ejs
@@ -36,8 +36,9 @@
                             </ul>
                         </div>
                         <div class="part-2">
-                            <a class="product-title" href="/productDetail/<%= Product._id %>">  <%= Product.name %></a><br>
-                            <h4 class="product-price">  ₪<%= Product.price %></h4>
+                            <a class="product-title" href="/productDetail/<%= Product._id %>"> <b><%= Product.name %></b> </a><br>
+                            <a href="" class="btn btn-primary btn-sm">Add to cart ₪<%= Product.price %></a>
+
                         </div>
                     </div>
                 </div>
