--- a/public/css/PopularProducts.css
+++ b/public/css/PopularProducts.css
@@ -3,6 +3,8 @@
 body {
     font-family: "Poppins", sans-serif;
     color: #444444;
+    background:#C9CCD5;
+
 }
 
 a,
@@ -13,6 +15,11 @@ a:hover {
 
 .section-products {
     padding: 80px 0 54px;
+    border: 1px solid #dfe5e9;
+    margin: 50px 50px 50px 50px;
+    background: #fff;
+    box-shadow: 16px 16px 10px #FFE3E3;
+    border-radius: 30px;
 }
 
 .section-products .header {
@@ -32,7 +39,9 @@ a:hover {
 }
 
 .section-products .single-product {
+    padding: 10px 10px 10px 10px;
     margin-bottom: 26px;
+    border: 1px solid #dfe5e9;
 }
 
 .section-products .single-product .part-1 {
